// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`async.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 84,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 94,
                          "sval": {
                            "sval": "notify_async1",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 110,
                          "sval": {
                            "sval": "sample message1",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_notify",
                        },
                      },
                    ],
                    "location": 84,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 18,
                          "sval": {
                            "sval": "notify_async1",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 34,
                          "sval": {
                            "sval": "",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_notify",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 18,
                          "sval": {
                            "sval": "notify_async1",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 34,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_notify",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 74,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 84,
                          "sval": {
                            "sval": "",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 87,
                          "sval": {
                            "sval": "sample message1",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_notify",
                        },
                      },
                    ],
                    "location": 74,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 18,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 23,
                          "sval": {
                            "sval": "sample message1",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_notify",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 18,
                          "sval": {
                            "sval": "notify_async_channel_name_too_long______________________________",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 85,
                          "sval": {
                            "sval": "sample_message1",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_notify",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "NotifyStmt": {
          "conditionname": "notify_async2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ListenStmt": {
          "conditionname": "notify_async2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UnlistenStmt": {
          "conditionname": "notify_async2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UnlistenStmt": {},
      },
    },
  ],
  "version": 160001,
}
`;

exports[`async.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 143,
                "val": {
                  "FuncCall": {
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_notification_queue_usage",
                        },
                      },
                    ],
                    "location": 143,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
